# storm_proj

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: database.py  logger_config.py  main.py  utils.py
backend/src/ml/: airport_match_coords.py  airport_matching.py  flight_data_cleaning.ipynb  match_weather_to_flights.py  weather_api.py  weather_api_flights_merge.ipynb
backend/src/utils/: helper.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Panel.tsx
frontend/src/features/flight-lookup/: FlightLookupForm.tsx
frontend/src/features/map-panel/: MapPanel.tsx
frontend/src/features/prediction-result/: PredictionResult.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
