[project]
name = "storm-proj"
version = "0.1.0"
description = "Map live weather predictions to a map"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
